Fixe vertical alignment of thin card headers.

--- a/src/components/cards/cards.less
+++ b/src/components/cards/cards.less
@@ -19,9 +19,8 @@
 	&.\+thin {
 		.cps-card__header {
 			height: 4.0rem;
-			line-height: 4.0rem;
+			padding: 1rem 1.6rem;
 			background-color: @gray2;
-			padding-left: 1.6rem;
 			border-radius: 2px 2px 0 0;
 		}
 
